--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mysql2": "^2.2.5",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
