--- a/project-02/package.json
+++ b/project-02/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.8",
+    "mongoose": "^5.12.10",
     "npm": "^7.13.0"
   }
 }
