--- a/project-02/package.json
+++ b/project-02/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
     "npm": "^7.13.0"
