--- a/project-02/package.json
+++ b/project-02/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.11.1",
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
     "nodemailer": "^6.6.1",
