--- a/project-02/package.json
+++ b/project-02/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.11.1",
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
     "npm": "^7.13.0"
   }
