--- a/project-03/package.json
+++ b/project-03/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "multer": "^1.4.2",
+    "nanoid": "^3.1.23"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
