--- a/project-03/package.json
+++ b/project-03/package.json
@@ -10,6 +10,8 @@
   "author": "lakinduchandula",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
