--- a/project-03/package.json
+++ b/project-03/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nanoid": "^3.1.23"
