--- a/project-03/package.json
+++ b/project-03/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
