--- a/project-03/package.json
+++ b/project-03/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-validator": "^6.11.1",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
