--- a/project-03/package.json
+++ b/project-03/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nanoid": "^3.1.23",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
