--- a/project-02/package.json
+++ b/project-02/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
     "csurf": "^1.11.0",
@@ -22,8 +23,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.11.1",
+    "helmet": "^4.6.0",
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.23",
     "nodemailer": "^6.6.1",
